Fix offcenter quote and make render pure

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -319,7 +319,6 @@ li > a:active {
 }
 
 #quote {
-  width: 100%;
   padding: 20px;
   text-align: center;
   font-style: italic;
